--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.shoplist">
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -10,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ShopList">
         <activity
-            android:name=".presentation.MainActivity2"
+            android:name=".presentation.ShopItemActivity"
             android:exported="true" />
         <activity
             android:name=".presentation.MainActivity"
